@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.13
 Date: ????
-  Changes:
+  Bugfixes:
+    - Do not crash on proxy-containers
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.12
 Date: 2025-01-11
